[package]
name = "rust-arc"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[dependencies]
pest        = "2.0.2"
pest-ast    = "0.3.3"
from-pest   = "0.3.1"
pest_derive = "2.0.1"
lazy_static = "1.2.0"
void        = "1.0.2"
polytype    = "6.0.0"

[patch.crates-io]
pest = { git = "https://github.com/cad97/pest", branch = "pair-to-pairs" }
